# image_segmetation

./: CMakeLists.txt  main.cpp
